--- a/cfg/EnableLambdaFromQp/encoder_randomaccess_main_rext.cfg
+++ b/cfg/EnableLambdaFromQp/encoder_randomaccess_main_rext.cfg
@@ -2,8 +2,9 @@
 BitstreamFile                 : str.bin
 ReconFile                     : rec.yuv
 
-#======== Profile ================
-Profile                       : main10
+#======== Profile definition ==============
+Profile                       : main-RExt   # Profile name to use for encoding. Use main (for FDIS main), main10 (for FDIS main10), main-still-picture, main-RExt, high-throughput-RExt, main-SCC
+Tier                          : main        # Tier to use for interpretation of --Level (main or high only)"
 
 #======== Unit definition ================
 MaxCUWidth                    : 64          # Maximum coding unit width in pixel
@@ -19,26 +20,27 @@ QuadtreeTUMaxDepthIntra       : 3
 #======== Coding Structure =============
 IntraPeriod                   : 32          # Period of I-Frame ( -1 = only first)
 DecodingRefreshType           : 1           # Random Accesss 0:none, 1:CRA, 2:IDR, 3:Recovery Point SEI
-GOPSize                       : 16          # GOP Size (number of B slice = GOPSize-1)
-IntraQPOffset                 : 0
-LambdaFromQpEnable            : 0           # see JCTVC-X0038 for suitable parameters for IntraQPOffset, QPoffset, QPOffsetModelOff, QPOffsetModelScale when enabled
+GOPSize                       : 16           # GOP Size (number of B slice = GOPSize-1)
+
+IntraQPOffset                 : -3
+LambdaFromQpEnable            : 1           # see JCTVC-X0038 for suitable parameters for IntraQPOffset, QPoffset, QPOffsetModelOff, QPOffsetModelScale when enabled
 #        Type POC QPoffset QPOffsetModelOff QPOffsetModelScale CbQPoffset CrQPoffset QPfactor tcOffsetDiv2 betaOffsetDiv2 temporal_id #ref_pics_active #ref_pics reference pictures     predict deltaRPS #ref_idcs reference idcs
-Frame1:  B   16   1        0.0                      0.0            0          0          0.6      0            0              0           2                3         -16 -24 -32            0 
-Frame2:  B    8   2        0.0                      0.0            0          0          0.2      0            0              1           2                3         -8  -16   8            1       8        4         1 1 0 1 
-Frame3:  B    4   3        0.0                      0.0            0          0          0.33     0            0              2           2                4         -4  -12   4  12        1       4        4         1 1 1 1 
-Frame4:  B    2   4        0.0                      0.0            0          0          0.33     0            0              3           2                5         -2  -10   2   6  14    1       2        5         1 1 1 1 1 
-Frame5:  B    1   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1    1  3    7  15    1       1        6         1 0 1 1 1 1 
-Frame6:  B    3   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -3   1   5  13    1      -2        6         1 1 1 1 1 0 
-Frame7:  B    6   4        0.0                      0.0            0          0          0.33     0            0              3           2                4         -2   -6   2  10        1      -3        6         0 1 1 1 1 0 
-Frame8:  B    5   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -5   1   3  11    1       1        5         1 1 1 1 1 
-Frame9:  B    7   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -3  -7   1   9    1      -2        6         1 1 1 1 1 0 
-Frame10: B   12   3        0.0                      0.0            0          0          0.33     0            0              2           2                3         -4  -12   4            1      -5        6         0 0 1 1 1 0 
-Frame11: B   10   4        0.0                      0.0            0          0          0.33     0            0              3           2                4         -2  -10   2   6        1       2        4         1 1 1 1 
-Frame12: B    9   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -9   1   3   7    1       1        5         1 1 1 1 1 
-Frame13: B   11   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -3 -11   1   5    1      -2        6         1 1 1 1 1 0 
-Frame14: B   14   4        0.0                      0.0            0          0          0.33     0            0              3           2                4         -2   -6 -14   2        1      -3        6         0 1 1 1 1 0 
-Frame15: B   13   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -5 -13   1   3    1       1        5         1 1 1 1 1 
-Frame16: B   15   5        0.0                      0.0            0          0          0.4      0            0              4           2                5         -1   -3 -7  -15   1    1      -2        6         1 1 1 1 1 0 
+Frame1:  B   16   1        0.0                      0.0            0          0          1.0      0            0              0           2                3         -16 -24 -32            0  
+Frame2:  B    8   1       -4.8848                   0.2061         0          0          1.0      0            0              1           2                3         -8  -16   8            1       8        4         1 1 0 1    
+Frame3:  B    4   4       -5.7476                   0.2286         0          0          1.0      0            0              2           2                4         -4  -12   4  12        1       4        4         1 1 1 1 
+Frame4:  B    2   5       -5.90                     0.2333         0          0          1.0      0            0              3           2                5         -2  -10   2   6  14    1       2        5         1 1 1 1 1 
+Frame5:  B    1   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1    1  3    7  15    1       1        6         1 0 1 1 1 1  
+Frame6:  B    3   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -3   1   5  13    1      -2        6         1 1 1 1 1 0 
+Frame7:  B    6   5       -5.90                     0.2333         0          0          1.0      0            0              3           2                4         -2   -6   2  10        1      -3        6         0 1 1 1 1 0 
+Frame8:  B    5   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -5   1   3  11    1       1        5         1 1 1 1 1  
+Frame9:  B    7   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -3  -7   1   9    1      -2        6         1 1 1 1 1 0 
+Frame10: B   12   4       -5.7476                   0.2286         0          0          1.0      0            0              2           2                3         -4  -12   4            1      -5        6         0 0 1 1 1 0 
+Frame11: B   10   5       -5.90                     0.2333         0          0          1.0      0            0              3           2                4         -2  -10   2   6        1       2        4         1 1 1 1 
+Frame12: B    9   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -9   1   3   7    1       1        5         1 1 1 1 1 
+Frame13: B   11   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -3 -11   1   5    1      -2        6         1 1 1 1 1 0 
+Frame14: B   14   5       -5.90                     0.2333         0          0          1.0      0            0              3           2                4         -2   -6 -14   2        1      -3        6         0 1 1 1 1 0 
+Frame15: B   13   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -5 -13   1   3    1       1        5         1 1 1 1 1 
+Frame16: B   15   6       -7.1444                   0.3            0          0          1.0      0            0              4           2                5         -1   -3 -7  -15   1    1      -2        6         1 1 1 1 1 0 
 
 #=========== Motion Search =============
 FastSearch                    : 1           # 0:Full search  1:TZ search
@@ -105,7 +107,7 @@ NumTileRowsMinus1                   : 0                # Number of tile rows in 
 TileRowHeightArray                  : 2                # Array containing tile row height values in units of CTU (from top to bottom in picture)
 
 LFCrossTileBoundaryFlag             : 1                # In-loop filtering is across or not across tile boundary.
-                                                       # 0:not across, 1: across 
+                                                       # 0:not across, 1: across                                                       
 
 #============ WaveFront ================
 WaveFrontSynchro                    : 0                # 0:  No WaveFront synchronisation (WaveFrontSubstreams must be 1 in this case).
@@ -128,6 +130,17 @@ RCLCUSeparateModel                  : 1                # Rate control: use LCU l
 InitialQP                           : 0                # Rate control: initial QP
 RCForceIntraQP                      : 0                # Rate control: force intra QP to be equal to initial QP
 
+#=========== RExt ============
+ExtendedPrecision                   : 0                # Increased internal accuracies to support high bit depths (not valid in V1 profiles)
+TransformSkipLog2MaxSize            : 2                # Specify transform-skip maximum size. Minimum 2. (not valid in V1 profiles)
+ImplicitResidualDPCM                : 1                # Enable implicitly signalled residual DPCM for intra (also known as sample-adaptive intra predict) (not valid in V1 profiles)
+ExplicitResidualDPCM                : 1                # Enable explicitly signalled residual DPCM for inter (not valid in V1 profiles)
+ResidualRotation                    : 1                # Enable rotation of transform-skipped and transquant-bypassed TUs through 180 degrees prior to entropy coding (not valid in V1 profiles)
+SingleSignificanceMapContext        : 1                # Enable, for transform-skipped and transquant-bypassed TUs, the selection of a single significance map context variable for all coefficients (not valid in V1 profiles)
+IntraReferenceSmoothing             : 1                # 0: Disable use of intra reference smoothing (not valid in V1 profiles). 1: Enable use of intra reference smoothing (same as V1) 
+GolombRiceParameterAdaptation       : 1                # Enable the partial retention of the Golomb-Rice parameter value from one coefficient group to the next
+HighPrecisionPredictionWeighting    : 1                # Use high precision option for weighted prediction (not valid in V1 profiles)
+CrossComponentPrediction            : 1                # Enable the use of cross-component prediction (not valid in V1 profiles)
+
 ### DO NOT ADD ANYTHING BELOW THIS LINE ###
 ### DO NOT DELETE THE EMPTY LINE BELOW ###
-
